--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ TODO
 * Add change of meaning for `@' depending on catcode to known issues. Weird settings of catcodes e.g. for numbers may have strange effects
 * Remove \subfiglist_test_conditionals:
 * \subfiglist_tokenize_spec_str:VN -> \subfiglist_tokenize_spec_str:NV
-* Set \subfiglist_spec_canvas_nums by dependency injection
+* Set \subfiglist_identifier_nums by dependency injection
 * tempa -> tmpa in accordance with kernel docs
 * Replace wrapping commands by more general \subfiglist_tl_set_wrapped in parser and lexer
 * Add logging of canvas numbers to \subfiglist_setup_file:nnn
@@ -18,6 +18,7 @@ TODO
 * Add starred commands for dummy/dummyfile to add frame
 * Rewrite error messages for int/float as "expected integer, found ... instead"
 * Replace any \cs in error messages by \tl_to_str:c { cs }
+* Remove error message "argument out of range"
 
 
 
