--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -936,12 +936,13 @@ xxx
 %  \subfiglist_spec_canvas_nums_tl
 %  \subfiglist_spec_canvas_nums_sorted_tl
 %  \subfiglist_canvas_count_int
-\begin{subfiglist}{ 1 @{asdf} {2} { 4 \\ 3 } \\[1ex] 5 }
+\begin{subfiglist}{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_spec_tl \error
   \subfiglist_setup_file:nnn {} {1} { figures/01 }
   \subfiglist_setup_dummyfile:nnn {} {2} { figures/02 }
   \subfiglist_setup_dummy:nnn {} {3} { 1.23 }
   \subfiglist_setup_dummy:nnn {} {4} { 4:3 }
-  \prop_show:N \subfiglist_canvas_prop \error
+  \subfiglist_setup_dummy:nnn {} {5} { 4:3 }
+%  \prop_show:N \subfiglist_canvas_prop \error
 \end{subfiglist}
 \end{document}
