--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -939,15 +939,15 @@ xxx
 \begin{subfiglist}{1 2}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_spec_tl \error
   \subfiglist_setup_file:nnn {} {1} { figures/01 }
-  \subfiglist_setup_dummyfile:nnn {} {2} { figures/02 }
+  \subfiglist_setup_dummy:nnn {} {2} { 4:3 }
 %  \subfiglist_setup_dummy:nnn {} {3} { 1.23 }
 %  \subfiglist_setup_dummy:nnn {} {4} { 4:3 }
 %  \subfiglist_setup_dummy:nnn {} {5} { 4:3 }
-%  \prop_ show:N \subfiglist_canvas_prop \error
-  \subfiglist_tl_set_head:NV \subfiglist_tempa_tl \subfiglist_parsed_spec_tl
-  \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-  \subfiglist_tl_set_head:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
-  \tl_to_str:N \subfiglist_tempb_tl\\
-\subfiglist_dimension_line:NNV \relax \relax \subfiglist_tempb_tl
+  \prop_show:N \subfiglist_canvas_prop \error
+%  \subfiglist_tl_set_head:NV \subfiglist_tempa_tl \subfiglist_parsed_spec_tl
+%  \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
+%  \subfiglist_tl_set_head:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+%  \tl_to_str:N \subfiglist_tempb_tl\\
+%\subfiglist_dimension_line:NNV \relax \relax \subfiglist_tempb_tl
 \end{subfiglist}
 \end{document}
