--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2175,25 +2175,55 @@
 
 \cs_generate_variant:Nn \subfiglist_get_key_figures_canvas:NNNn { NNNV }
 
-\cs_new:Npn \subfiglist_get_key_figures_line:NNn #1 #2 #3 #4
+\cs_new:Npn \subfiglist_get_key_figures_space:NNNn #1 #2 #3 #4
+%
+% #1: Floating point variable to store canvas ratio
+% #2: Dimension to store horizontal offset
+% #3: Dimension to store vertical offset
+% #4: Canvas specification
+{
+  \fp_zero:N #1
+  \dim_set_eq:NN #2 \subfiglist_canvas_space_dim
+  \dim_zero:N #3
+}
+
+\cs_generate_variant:Nn \subfiglist_get_key_figures_space:NNNn { NNNV }
+
+\cs_new:Npn \subfiglist_get_key_figures_line:NNNn #1 #2 #3 #4
 %
 % #1: Floating point variable to store canvas ratio
 % #2: Dimension to store horizontal offset
 % #3: Dimension to store vertical offset
 % #4: Token list with parsed specification string for current line
 {
-  \tl_map_inline:nn { #4 }
-  {
-    \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
-    \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
-    \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+  \group_begin:
+    \fp_zero:N  #1
+    \dim_zero:N #2
+    \dim_zero:N #3
     
-    \subfiglist_use:c { subfiglist_get_key_figures_ \subfiglist_tempa_tl :NNNV }
-      \subfiglist_temp_fp \subfiglist_tempa_dim \subfiglist_tempb_dim \subfiglist_tempb_tl
-  }
+    \tl_map_inline:nn { #4 }
+    {
+      \subfiglist_tl_set_head:Nn \subfiglist_tempa_tl { ##1 }
+      \subfiglist_tl_set_tail:Nn \subfiglist_tempb_tl { ##1 }
+      \subfiglist_tl_set_unwrapped:NV \subfiglist_tempb_tl \subfiglist_tempb_tl
+      
+      \subfiglist_use:c { subfiglist_get_key_figures_ \subfiglist_tempa_tl :NNNV }
+        \subfiglist_temp_fp \subfiglist_tempa_dim \subfiglist_tempb_dim \subfiglist_tempb_tl
+      
+      \fp_add:NV #1 \subfiglist_temp_fp
+      \dim_add:NV #2 \subfiglist_tempa_dim
+      \dim_add:Nf #3 { \subfiglist_tempb_dim * \dim_ratio:nn { \fp_to_dim:N \subfiglist_temp_fp } { 1pt } }
+    }
+    
+    \dim_set:Nf #3 { #3 * \dim_ratio:nn { 1pt } { \fp_to_dim:N #1 } }
+  
+  \subfiglist_group_var_return:NN \fp_set:Nn #1
+  \subfiglist_group_var_return:NN \dim_set:Nn #2
+  \subfiglist_group_var_return:NN \dim_set:Nn #3
+  \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_get_key_figures_line:NNn { NNV }
+\cs_generate_variant:Nn \subfiglist_get_key_figures_line:NNNn { NNNV }
 
 
 
