--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -938,12 +938,11 @@ xxx
 %  \subfiglist_canvas_count_int
 \begin{subfiglist}{1 2}%{ 1 @{asdf} {2} { 3 \\ 4 } \\[1ex] 5 }
 %  \tl_show:N \subfiglist_spec_tl \error
-  \subfiglist_setup_dummy:nnn {top=1pt} {1} { 1 }
-  \subfiglist_setup_dummy:nnn {bottom=3pt} {2} { 1 }
+  \subfiglist_setup_dummy:nnn {left=2pt} {1} { 1 }
+  \subfiglist_setup_dummy:nnn {} {2} { 1 }
 %  \subfiglist_setup_dummy:nnn {} {3} { 1.23 }
 %  \subfiglist_setup_dummy:nnn {} {4} { 4:3 }
 %  \subfiglist_setup_dummy:nnn {} {5} { 4:3 }
-  \prop_show:N \subfiglist_canvas_prop \error
   
   \subfiglist_tl_set_head:NV \subfiglist_tempa_tl \subfiglist_parsed_spec_tl
   \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
@@ -954,9 +953,10 @@ xxx
 \dim_new:N \tempa_dim
 \dim_new:N \tempb_dim
 
-\subfiglist_get_key_figures_line:NNNV \temp_fp \tempa_dim \tempb_dim \subfiglist_tempb_tl
-\fp_use:N \temp_fp,
-\dim_use:N \tempa_dim,
-\dim_use:N \tempb_dim
+\subfiglist_dimension_line:NnV \subfiglist_dimensioned_spec_tl { 25.16667pt } \subfiglist_tempb_tl
+\dim_use:N \subfiglist_line_height_dim
+
+  \prop_show:N \subfiglist_canvas_prop \error
+  \tl_show:N \subfiglist_dimensioned_spec_tl
 \end{subfiglist}
 \end{document}
